增加数据库Room

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,10 @@
-
 android.injected.testOnly=false
 android.useAndroidX=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
-
 # 为 Studio 分配默认的内存大小
 org.gradle.jvmargs = -Xmx2048m
-
+android.suppressUnsupportedCompileSdk=32
 # 表示将第三方库迁移到 AndroidX
 android.enableJetifier = true
