--- a/app/build.gradle
+++ b/app/build.gradle
@@ -229,9 +229,9 @@ dependencies {
     implementation 'com.swallowsonny:convert-ext:1.0.4'
 
     //Room数据库
-//    implementation "androidx.room:room-runtime:2.3.0"
-//    implementation "androidx.room:room-ktx:2.3.0"
-//    kapt "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-runtime:2.3.0"
+    implementation "androidx.room:room-ktx:2.3.0"
+    //kapt "androidx.room:room-compiler:2.3.0"
 
     // 多语种：https://github.com/getActivity/MultiLanguages
     // 悬浮窗：https://github.com/getActivity/XToast
