--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,12 +135,12 @@ android {
         }
     }
 
-//    externalNativeBuild {
-//        cmake {
-//            path file('src/main/cpp/CMakeLists.txt')
-//            version "3.10.2.4988404"
-//        }
-//    }
+    externalNativeBuild {
+        cmake {
+            path file('src/main/cpp/CMakeLists.txt')
+            version "3.10.2.4988404"
+        }
+    }
 
 }
 
